--- a/style.css
+++ b/style.css
@@ -14741,8 +14741,8 @@ kendo-label.k-radio-label > .k-label {
 }
 
 .k-progressbar {
-    color: #212529;
-    background-color: #e9ecef;
+    color:  #00687F;
+    background-color:  #00687F;
 }
 
 .k-progressbar .k-state-selected {
@@ -14755,9 +14755,9 @@ kendo-label.k-radio-label > .k-label {
 }
 
 .k-progressbar-indeterminate {
-    color: #212529;
-    background-color: #e9ecef;
-    background-image: linear-gradient(45deg, #d6d9dc 25%, transparent 25%, transparent 50%, #d6d9dc 50%, #d6d9dc 75%, transparent 75%, transparent);
+    color: #00687F;
+    background-color: #00687F;
+    background-image: linear-gradient(45deg,  #00687F 25%, transparent 25%, transparent 50%,  #00687F 50%,  #00687F 75%, transparent 75%, transparent);
     background-size: 1rem 1rem;
     -webkit-animation: progressbar-indeterminate-animation 1s linear infinite;
             animation: progressbar-indeterminate-animation 1s linear infinite;
