--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ kendo-sortable {
 }
 
 .k-text-selection ::selection, .k-block ::selection, .k-panel ::selection, .k-pane-wrapper ::selection, .k-view ::selection, .k-progressbar ::selection, .k-numerictextbox ::selection, .k-flatcolorpicker ::selection, .k-combobox ::selection, .k-datepicker ::selection, .k-timepicker ::selection, .k-datetimepicker ::selection, .k-dateinput ::selection, .k-dropdown ::selection, .k-dropdowntree ::selection, .k-multiselect ::selection, .k-maskedtextbox ::selection, .k-rating ::selection, .k-window ::selection, .k-drawer ::selection, .k-notification ::selection, .k-breadcrumb ::selection, .k-pager-wrap ::selection, .k-card ::selection, .k-splitter ::selection, .k-spreadsheet ::selection, .k-scheduler ::selection, .k-chat ::selection, .k-mediaplayer ::selection, .k-pdf-viewer ::selection, kendo-scrollview.k-scrollview-wrap ::selection, .k-scrollview ::selection, .k-chart ::selection, .k-sparkline ::selection, .k-stockchart ::selection {
-    background-color: #00687F;
+    background-color: #007bff;
     color: #ffffff;
 }
 
@@ -14741,13 +14741,13 @@ kendo-label.k-radio-label > .k-label {
 }
 
 .k-progressbar {
-    color:  #00687F;
-    background-color:  #00687F;
+    color: #212529;
+    background-color: #e9ecef;
 }
 
 .k-progressbar .k-state-selected {
     color: white;
-    background-color: #00687F;
+    background-color: #007bff;
 }
 
 .k-progressbar .k-item {
@@ -14755,9 +14755,9 @@ kendo-label.k-radio-label > .k-label {
 }
 
 .k-progressbar-indeterminate {
-    color: #00687F;
-    background-color: #00687F;
-    background-image: linear-gradient(45deg,  #00687F 25%, transparent 25%, transparent 50%,  #00687F 50%,  #00687F 75%, transparent 75%, transparent);
+    color: #212529;
+    background-color: #e9ecef;
+    background-image: linear-gradient(45deg, #d6d9dc 25%, transparent 25%, transparent 50%, #d6d9dc 50%, #d6d9dc 75%, transparent 75%, transparent);
     background-size: 1rem 1rem;
     -webkit-animation: progressbar-indeterminate-animation 1s linear infinite;
             animation: progressbar-indeterminate-animation 1s linear infinite;
@@ -14853,7 +14853,7 @@ kendo-label.k-radio-label > .k-label {
 
 .k-messagebox-primary {
     border-color: #b8daff;
-    color: #00687F;
+    color: #004085;
     background-color: #cce5ff;
 }
 
